css/style.css
body {
  margin: 0;
}

.hero {
  background-color: rgb(11, 5, 63);
  color: white;
}

.nav-background {
  background-color: rgb(189, 189, 194);
}

.social-icons {
  position: fixed;
  top: 50%;
  transform: translateY(-50%);
  display: flex;
  flex-direction: column;
  padding: 5px;
}
.social-icons > * {
  margin-bottom: 1em;
}

